# python-ifncli

./: .gitignore  changelog.md  ifn  pyproject.toml  readme.md  requirements-db.txt  requirements.txt
docs/: email.md  participants.md  reponse-db-build.md  reponse-db-import.md  response-db-export.md  response-db.md  response.md  study.md  survey.md  user.md
docs/examples/: layout.html
ifncli/: README  appConfig.py  config.py  platform.py  plugin.py  shell.py  utils.py
ifncli/api/: __init__.py  management_api.py  profile.py  response_parser.py
ifncli/api/messaging/: models.py  types.py
ifncli/commands/: __init__.py  config.py  email.py  export.py  login.py  participants.py  response.py  stats.py  study.py  survey.py  survey_repository.py  user.py
ifncli/docs/: email.md  readme.md  response.md  study.md  survey.md
ifncli/formatter/: __init__.py  context.py  expression.py  html.py  readable.py  study.py  survey.py  translatable.py
ifncli/formatter/models/: __init__.py  dictionnary.py  expression.py  responses.py  survey.py  time.py  translatable.py
ifncli/formatter/survey/: __init__.py  dictionnary.py  parser.py  validator.py
ifncli/managers/: __init__.py
ifncli/managers/export/: __init__.py
ifncli/managers/messaging/: __init__.py  automessages.py  manager.py  template.py  test_utils.py  times.py  utils.py
ifncli/stats/collector/: __init__.py  builder.py  collector.py  data_collector.py  fields.py
ifncli/surveys/: __init__.py  html.py
ifncli/utils/: __init__.py  formatter.py  io.py  password.py  sqlite.py  struct.py  time.py
(+51 files in other folders)
