[project]
name = "ifn-cli"
version = "0.1.0"
description = "Influenzanet (ifn) Command Line Management tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
# For export
"python-dateutil==2.8.2",
"influenzanet.surveys==1.2.0",
"influenzanet.api==1.3.*",
"cliff==3.10.*"
]

[project.optional-dependencies]
export = [
 "pandas",
 "pyarrow",
 "duckdb"
]